# backend/api-spec/openapi.yaml
@@ -15,6 +15,8 @@ paths:
     $ref: './lisa.yaml#/paths/~1lisa~1chat'
   /lisa/analyze-bill:
     $ref: './lisa.yaml#/paths/~1lisa~1analyze-bill'
+  /lisa/process-invoice:
+    $ref: './lisa.yaml#/paths/~1lisa~1process-invoice'
   /expenses:
     $ref: './expenses.yaml#/paths/~1expenses'
   /expenses/summary:
@@ -60,10 +62,12 @@ components:
       $ref: './lisa.yaml#/components/schemas/ChatRequest'
     ChatResponse:
       $ref: './lisa.yaml#/components/schemas/ChatResponse'
-    ValidateBillRequest:
-      $ref: './lisa.yaml#/components/schemas/ValidateBillRequest'
     ProcessResponse:
       $ref: './lisa.yaml#/components/schemas/ProcessResponse'
+    AiProcessInvoiceResponse:
+      $ref: './lisa.yaml#/components/schemas/AiProcessInvoiceResponse'
+    AiProcessedInvoice:
+      $ref: './lisa.yaml#/components/schemas/AiProcessedInvoice'
     AiValidatedInvoice:
       $ref: './lisa.yaml#/components/schemas/AiValidatedInvoice'
     AiLisaExpenseItem:
